--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kiskesis.github.io/near-spring-third/",
+  "homepage": "https://kiskesis.github.io/Near-spring4",
   "dependencies": {
     "@craco/craco": "^6.4.3",
+    "@near-wallet-selector/core": "^3.0.2",
+    "@near-wallet-selector/near-wallet": "^3.0.2",
+    "@near-wallet-selector/sender": "^3.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "big.js": "^6.1.1",
     "bn.js": "^5.2.0",
     "borsh": "^0.7.0",
     "classnames": "^2.3.1",
