--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "borsh": "^0.7.0",
     "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
-    "gh-pages": "^3.2.3",
     "near-api-js": "^0.44.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -50,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
